--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Website</title>
+  <style>
+    body {
+      background-color: white;
+      color: black;
+      font-family: Arial, sans-serif;
+      margin: 40px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello John</h1>
+  <p>This site is very cool isnt it?</p>
+</body>
+</html>
