--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <body>
   <h1>Hello John</h1>
   <p>This site is very cool isnt it?</p>
-  <img src=john2.jpg>
+  <img src="john2.jpg">
 </body>
 </html>
