--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <h1>Hello John</h1>
+  <img src="test.jpg" alt="Test image" style="max-width:300px;">
   <p>This site is very cool isnt it?</p>
- <img src="john2.jpg" alt="john2">
 </body>
 </html>
