--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <h1>Hello John</h1>
+  <img src="john.jpg" alt="john" style="max-width:300px;">
   <p>This site is very cool isnt it?</p>
 </body>
 </html>
